# scedge-core

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.scedge.yml
docs/: api.md
examples/: docker-compose.yml  tenants.example.json
src/: api.rs  cache.rs  config.rs  error.rs  events.rs  main.rs  metrics.rs  model.rs  policy.rs  state.rs  upstream.rs
static/: index.html
